# sql-debug-env

./: .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
server/: __init__.py  app.py  db.py  graders.py  requirements.txt  sql_environment.py
server/tasks/: __init__.py  task_1_syntax.py  task_2_join.py  task_3_aggregation.py  task_4_window.py  task_5_null.py  task_6_join.py
server/tests/: __init__.py  test_grader.py
