[project]
name = "sql-debug-env"
version = "1.0.0"
description = "RL environment for SQL debugging tasks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openenv-core>=0.1.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "openai>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]

[tool.hatch.build.targets.wheel.force-include]
"models.py" = "models.py"
"client.py" = "client.py"
"inference.py" = "inference.py"
"__init__.py" = "__init__.py"

[tool.uv]
dev-dependencies = ["pytest>=7.0.0"]

[project.scripts]
server = "server.app:app"
